--- a/batch1-app/package.json
+++ b/batch1-app/package.json
@@ -1,9 +1,9 @@
 {
   "name": "batch1-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "sequelize db:migrate && node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -12,9 +12,11 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "mysql2": "^1.4.2",
     "sequelize": "^4.17.0",
     "sequelize-cli": "^3.0.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "strong-params": "^0.7.1"
   },
   "devDependencies": {
     "sequelize-cli": "^3.0.0"
