--- a/batch1-app/package.json
+++ b/batch1-app/package.json
@@ -10,6 +10,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "graphql": "^0.11.7",
+    "graphql-server-express": "^1.2.0",
+    "graphql-tools": "^2.6.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.4.2",
